fix shift show

--- a/app/assets/stylesheets/shifts.scss
+++ b/app/assets/stylesheets/shifts.scss
@@ -17,6 +17,10 @@
     background-color: #e65656;
     border: 2px solid #467fb9;
 }
+.top a{
+    display: inline;
+}
+
 .group{
     margin-top: 20px;
     display: flex;
